mock based tests and upgrade commands